Added 1.21.10 support, removed ServerPause & BetterLead